welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:9: error: not found: value value
		if(nums(c) == value)
                              ^