welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {

	var c = 0
	var r = 0
	
	while(nums.length > c)
	{
		
		if(nums(c) == value)
		{
			r = r +1 ;
		}
		c = c+1
	}

	return r

}
